# Template-SDL

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: App.cpp  AppContext.hpp  CMakeLists.txt  Common.cpp  Common.hpp  PipelineReloader.cpp  PipelineReloader.hpp  PipelineWatcherContext.cpp  PipelineWatcherContext.hpp  Vertex.hpp
assets/shaders/source/: RawTriangle.vert  SolidColor.frag
cmake/: CodeSpell.cmake  CompilerWarnings.cmake  Config.cmake  Features.cmake  Format.cmake  LinkerFlags.cmake  PreventInSourceBuilds.cmake
cmake/Platform/Common/: CMakePresets.json
cmake/Platform/Linux/: CMakePresets.json
cmake/Platform/Mac/: CMakePresets.json
cmake/Platform/Windows/: CMakePresets.json
scripts/: run.bat
